# UTM

./: .gitignore  INSTRUCTIONS.txt  LICENSE  README.md  README.txt  highlighters.py  main.py  pyproject.toml  tm.py  tmbuilder.py  tmexceptions.py  tmparser.py  utm.py
src/: highlighters.py  utm.py
src/tm/: builder.py  exceptions.py  parser.py  tm.py  tmbuilder.py
test/: test_TuringMachineParser.py
tm_examples/: tm_addition.txt  tm_multiplication.txt
tools/: installer.sh
utm/: __main__.py  highlighters.py  utm.py
utm/tm/: __init__.py  builder.py  exceptions.py  parser.py  tm.py
