[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "utm"
description = 'Universal Turing Machine'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [{ name = "Josep Pon Farreny", email = "jponfarreny@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["PySide2~=5.12"]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/utm#readme"
Issues = "https://github.com/unknown/utm/issues"
Source = "https://github.com/unknown/utm"

[tool.hatch.version]
path = "utm/__init__.py"

[tool.hatch.envs.default]
dependencies = ["pytest", "pytest-cov", "black", "mypy"]

[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=utm --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = ["utm/__about__.py"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
